clusters/cluster0/kubernetes/apps/media/plex/app/plex-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: plex-service
  namespace: media
spec:
  selector:
    app: plex
  # externalTrafficPolicy: Local # testing 20260312
  ports:
    - name: plex
      protocol: TCP
      port: 32400
      targetPort: 32400
      # nodePort: 32400
  # type: LoadBalancer
